statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jackett
  namespace: jackett
spec:
  selector:
    matchLabels:
      app: jackett # has to match .spec.template.metadata.labels
  serviceName: "jackett"
  minReadySeconds: 10 # by default is 0
  template:
    metadata:
      namespace: jackett
      labels:
        app: jackett # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: jackett
        image: lscr.io/linuxserver/jackett:latest
        ports:
        - containerPort: 9117
          name: jackett
        volumeMounts:
        - name: data
          mountPath: /downloads
        - name: data
          mountPath: /config
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi
