service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: jackett
  labels:
    app: jackett-svc
  name: jackett-svc
spec:
  ports:
  - name: 9117-9117
    port: 9117
    protocol: TCP
    targetPort: 9117
    nodePort: 30319
  selector:
    app: jackett
  type: LoadBalancer
